--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 class="section-title">Projects</h2>
             <ul class="skills-ul img">
                 <li>
-                    <img src="./images/propject-1.png" height="200" width="200">
+                    <img src="project-1.png" height="200" width="200">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum quos asperiores voluptatum, itaque hic quas a minus! Ad magni praesentium a aperiam eos ipsum natus esse exercitationem mollitia perspiciatis quas necessitatibus iure, ut, expedita cumque. Doloribus quas ratione illum rem officiis fugit magnam excepturi iure! Odio at consequuntur aut unde.</p>
                 </li>
                 <li>
