--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum quos asperiores voluptatum, itaque hic quas a minus! Ad magni praesentium a aperiam eos ipsum natus esse exercitationem mollitia perspiciatis quas necessitatibus iure, ut, expedita cumque. Doloribus quas ratione illum rem officiis fugit magnam excepturi iure! Odio at consequuntur aut unde.</p>
                 </li>
                 <li>
-                    <img src="./images/project-2.png" height="200" width="200">
+                    <img src="project-2.png" height="200" width="200">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, rerum excepturi libero facilis quae fuga modi similique cumque voluptates cupiditate exercitationem at velit tempore? A aut, quae recusandae obcaecati voluptatum quasi tempora, asperiores fugiat iure ullam suscipit hic amet velit labore? Quo quaerat deserunt, unde alias molestias doloribus accusantium veritatis!</p>
                 </li>
             </ul>
